Fix collapsing of toggle input (#403)

--- a/editor/sass/editor/_editor-assets-panel.scss
+++ b/editor/sass/editor/_editor-assets-panel.scss
@@ -296,6 +296,11 @@
 }
 
 .pcui-asset-panel {
+    > .pcui-panel-header > .pcui-panel-header-title {
+        flex-grow: 0;
+        flex-basis: auto;
+    }
+
     > .pcui-resizable-handle {
         // make z-index higher than the
         // details view z-index otherwise part
